gl33-master/src/test/deca/context/invalid/other/declaration_meme_nom_int_float.deca
// Invalid
// Déclaration des variables de même nom (int et float)


{
   int a;
   float a;
}
